Typos and minor fixes. HW7 added.